add tech change listener